--- a/firebase-project/public/index.html
+++ b/firebase-project/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Fotomatones para Eventos</title>
+<title>PimPim Fotomatones</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -145,7 +145,7 @@ a:hover {
   <div class="contact-container">
     <div class="contact-options">
       <div class="contact-option">
-        <a href="https://wa.me/tu_numero_telefono" target="_blank">
+        <a href="https://wa.me/628145508" target="_blank">
           <h3><img src="images/whatsapp_icon.png" alt="WhatsApp Icon">WhatsApp</h3> <!-- Ruta de tu icono de WhatsApp -->
         </a>
       </div>
@@ -153,7 +153,7 @@ a:hover {
         <h3><img src="images/mail_icon.png" alt="Mail Icon">Escríbenos un mail</h3> <!-- Ruta de tu icono de correo -->
       </div>
       <div class="contact-option">
-        <a href="https://www.instagram.com/tu_cuenta_instagram" target="_blank">
+        <a href="https://www.instagram.com/pimpimfotomatones" target="_blank">
           <h3><img src="images/instagram_icon.png" alt="Instagram Icon">Instagram</h3> <!-- Ruta de tu icono de Instagram -->
         </a>
       </div>
